20220409 프로토타입(거래내역 수정, 상점후기 작성, 관리자페이지 수정)

--- a/admin/report.html
+++ b/admin/report.html
@@ -82,26 +82,34 @@
               </div>
               <div class="card-body">
            
-                <table id="datatablesSimple">
+                <table id="datatablesSimple"
+                  <colgroup>
+                    <col style="width: 10%" />
+                    <col style="width: 10%" />
+                    <col style="width: 20%" />
+                    <col style="width: 10%" />
+                    <col style="width: 40%" />
+                    <col style="width: 10%" />
+                  </colgroup>
                     <thead>
                       <tr>
-                        <th>상품번호</th>
-                        <th>제목</th>
-                        <th>작성자</th>
-                        <th>내용</th>
-                        <th>첨부파일</th>
-                        <th>이메일</th>                 
+                        <th class="text-center">상품번호</th>
+                        <th class="text-center">신고대상자</th>
+                        <th class="text-center">제목</th>
+                        <th class="text-center">작성자</th>
+                        <th class="text-center">내용</th>
+                        <th class="text-center">첨부파일</th>                 
                       </tr>
                     </thead>
               
                     <tbody>
                       <tr>
-                          <td>박인우</td>
-                          <td>컴퓨터시스템과</td>
-                          <td>inwoo</td>
-                          <td>010-1234-5678</td>
-                          <td>인천광역시 미추홀구 인하로 100</td>
-                          <td>inwoo@gmail.com</td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
                         </tr>
                       </tr>
                       <tr>
