--- a/main/detail.html
+++ b/main/detail.html
@@ -160,6 +160,8 @@
           </div>
         </div>
         <h2>상품설명</h2><hr>
+        <textarea 
+        style="width: 100%; height: auto"></textarea>
     </section>
     <footer class="py-5 bg-dark">
       <div class="container text-white">
