--- a/member/login.html
+++ b/member/login.html
@@ -70,14 +70,15 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form>
-        <img
-          class="mb-4"
-          src="/images/emblem.png"
-          alt=""
-          width="80"
-          height="80"
-        />
+      <form action="" method="post">
+        <a href="/main/search.html">
+          <img
+            class="mb-4"
+            src="/images/emblem.png"
+            alt=""
+            width="80"
+            height="80"
+        /></a>
         <div class="form-floating">
           <input
             type="text"
@@ -107,5 +108,6 @@
         </button>
       </form>
     </main>
+    <script></script>
   </body>
 </html>
