--- a/main/search.html
+++ b/main/search.html
@@ -111,7 +111,7 @@
           class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
         <div class="col mb-5 text-center">
-          <a href="/detail.html">
+          <a href="/main/detail.html">
           <div class="card h-100">
             <!-- Product image-->
             <img
