--- a/member/join.html
+++ b/member/join.html
@@ -65,7 +65,12 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form method="post" enctype="multipart/form-data">
+      <form
+        id="joinForm"
+        name="joinForm"
+        method="post"
+        enctype="multipart/form-data"
+      >
         <img
           class="mb-4"
           src="/images/emblem.png"
@@ -192,12 +197,61 @@
         <div class="form-floating">
           인하공전 학생인증(학생증 이미지 첨부)
           <p></p>
-          <input type="file" name="FileName" />
+          <input type="file" id="fileInput" />
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">
+        <button type="submit" class="w-100 btn btn-lg btn-primary">
           회원가입
         </button>
       </form>
     </main>
+    <script>
+      var myForm = document.getElementById('joinForm');
+
+      myForm.addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        var fileInput = document.getElementById('fileInput');
+        var formData = new FormData();
+        formData.append('name', document.getElementById('floatingName').value);
+        formData.append('id', document.getElementById('floatingId').value);
+        formData.append(
+          'password',
+          document.getElementById('floatingPassword').value
+        );
+        formData.append(
+          'department',
+          document.getElementById('departSelect').value
+        );
+        formData.append(
+          'phone',
+          document.getElementById('floatingPhone').value
+        );
+        formData.append(
+          'address',
+          document.getElementById('floatingAddress').value
+        );
+        formData.append(
+          'email',
+          document.getElementById('floatingEmail').value
+        );
+        formData.append('image', fileInput.files[0]);
+
+        fetch('http://182.218.194.156:8080/auth/register', {
+          method: 'post',
+          headers: {},
+          body: formData,
+        })
+          .then(function (response) {
+            return response.text();
+          })
+          .then(function (data) {
+            console.log(data);
+            location.href = '/main/search.html';
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      });
+    </script>
   </body>
 </html>
