--- a/member/login.html
+++ b/member/login.html
@@ -70,7 +70,7 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form action="" method="post">
+      <form id="loginForm" method="post">
         <a href="/main/search.html">
           <img
             class="mb-4"
@@ -83,7 +83,7 @@
           <input
             type="text"
             class="form-control"
-            id="floatingInput"
+            id="id"
             placeholder="아이디"
           />
           <label for="floatingInput">아이디</label>
@@ -92,7 +92,7 @@
           <input
             type="password"
             class="form-control"
-            id="floatingPassword"
+            id="password"
             placeholder="비밀번호"
           />
           <label for="floatingPassword">비밀번호</label>
@@ -108,6 +108,35 @@
         </button>
       </form>
     </main>
-    <script></script>
+    <script>
+      var myForm = document.getElementById('loginForm');
+
+      myForm.addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        var id = document.getElementById('id').value;
+        var password = document.getElementById('password').value;
+
+        fetch('http://182.218.194.156:8080/auth/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            id: id,
+            password: password,
+          }),
+        })
+          .then(function (response) {
+            return response.text();
+          })
+          .then(function (data) {
+            console.log(data);
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      });
+    </script>
   </body>
 </html>
