--- a/member/login.html
+++ b/member/login.html
@@ -132,6 +132,7 @@
           })
           .then(function (data) {
             console.log(data);
+            location.href = '/main/search.html';
           })
           .catch(function (error) {
             console.log(error);
