20220427 로그인 여부, 로그아웃, 카테고리 api

--- a/member/login.html
+++ b/member/login.html
@@ -132,6 +132,9 @@
           })
           .then(function (data) {
             console.log(data);
+            localStorage.setItem('token', JSON.parse(data).accessToken);
+            localStorage.setItem('id', id);
+            location.href = '/main/search.html';
           })
           .catch(function (error) {
             console.log(error);
