--- a/main/register.html
+++ b/main/register.html
@@ -10,6 +10,10 @@
     <meta name="description" content="메인 페이지" />
     <meta name="author" content="이성호" />
     <title>상품등록</title>
+
+    <script src="addFile.js"></script>
+    <script src="category.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
 
@@ -78,46 +82,39 @@
     <!-- Section-->
     <section class="py-3">
       <div class="container px-4 px-lg-5 mt-3">
-        <h2>상품등록</h2>
-        <hr />
-        <div class="row mx-5 mb-4">
-          <h4>카테고리 선택</h4>
-          <div class="col-md-4 text-center mt-4">
-            <b>대분류</b>
-            <ul class="list-group my-3">
-              <li class="list-group-item-action list-group-item">전체</li>
-              <li class="list-group-item">도서</li>
-              <li class="list-group-item">의류</li>
-              <li class="list-group-item">전자제품</li>
-              <li class="list-group-item">자취방양도</li>
-            </ul>
+        <form
+          id="productInfo"
+          name="productInfo"
+          method="post"
+          onsubmit="return false;"
+          enctype="multipart/form-data"
+        >
+          <h2>상품등록</h2>
+          <hr />
+          <div class="row mx-5 mb-4">
+            <h4>카테고리 선택</h4>
+            <div class="col-md-4 text-center">
+              <b>대분류</b>
+              <ul id="parent" class="list-group pb-5">
+                <li class="list-group-item-action list-group-item">전체</li>
+              </ul>
+            </div>
+            <div class="col-md-4 text-center">
+              <b>중분류</b>
+              <ul id="children1" class="list-group pb-5 none"></ul>
+            </div>
+            <div class="col-md-4 text-center">
+              <b>소분류</b>
+              <ul
+                id="children2"
+                class="list-group pb-5 none overflowY-scroll"
+              ></ul>
+            </div>
           </div>
-          <div class="col-md-4 text-center mt-4">
-            <b>중분류</b>
-            <ul class="list-group my-3" style="display: none">
-              <li class="list-group-item"></li>
-              <li class="list-group-item"></li>
-              <li class="list-group-item"></li>
-              <li class="list-group-item"></li>
-              <li class="list-group-item"></li>
-            </ul>
-          </div>
+          <!--상품 정보-->
+          <div class="row mx-5 mb-5">
+            <h4>상품 정보</h4>
 
-          <div class="col-md-4 text-center mt-4">
-            <b>소분류</b>
-            <ul class="list-group my-3" style="display: none">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-              <li class="list-group-item">A fourth item</li>
-              <li class="list-group-item">And a fifth one</li>
-            </ul>
-          </div>
-        </div>
-        <!--상품 정보-->
-        <div class="row mx-5 mb-5">
-          <h4>상품 정보</h4>
-          <form action="">
             <table
               id="product-register-table"
               style="width: 100%; border: 1px solid black"
@@ -134,6 +131,7 @@
                 <td class="text-center">상품 설명</td>
                 <td>
                   <textarea
+                    id="productContent"
                     cols="120"
                     rows="10"
                     placeholder="상품에 대해 설명해 주세요."
@@ -142,14 +140,21 @@
               </tr>
               <tr>
                 <td class="text-center">상품 이미지</td>
-                <td><input type="file" /></td>
+                <td id="imageForm">
+                  <input
+                    id="productImage"
+                    type="file"
+                    onchange="addFile(this);"
+                    multiple
+                  />
+                  <div class="file-list"></div>
+                </td>
               </tr>
             </table>
-          </form>
-        </div>
-        <div class="row mx-5 mb-5">
-          <h4>경매 설정</h4>
-          <form action="">
+          </div>
+          <div class="row mx-5 mb-5">
+            <h4>경매 설정</h4>
+
             <table
               id="product-register-table"
               style="width: 100%; border: 1px solid black"
@@ -164,15 +169,19 @@
               </colgroup>
               <tr>
                 <td class="text-center">시작가</td>
-                <td><input type="text" id="startMoney" size="20" />원</td>
+                <td><input type="text" id="startPrice" size="20" />원</td>
                 <td class="text-center">즉시 구매가</td>
-                <td><input type="text" id="instantMoney" size="20" />원</td>
+                <td>
+                  <input type="text" id="instantPrice" size="20" disabled />원
+                </td>
                 <td colspan="2" class="text-center">
                   <label
                     ><input
                       type="checkbox"
                       name="impossible"
                       value="impossible"
+                      onclick="toggleTextbox(this)"
+                      checked
                     />불가능</label
                   >
                 </td>
@@ -180,17 +189,19 @@
               <tr>
                 <td class="text-center">입찰 단위</td>
                 <td colspan="5">
-                  <select id="bid unit">
+                  <select id="bidUnit">
                     <option value="no_select">선택하세요</option>
-                    <option value="1000">1,000 원</option>
-                    <option value="3000">3,000 원</option>
-                    <option value="5000">5,000 원</option>
-                    <option value="10000">1,0000 원</option>
-                  </select>
+                    <option value="100">100</option>
+                    <option value="1000">1,000</option>
+                    <option value="3000">3,000</option>
+                    <option value="5000">5,000</option>
+                    <option value="10000">10,000</option></select
+                  >원
                 </td>
               </tr>
-              <tr class="text-center">
-                <td>경매 기간</td>
+              <tr>
+                <td class="text-center">경매 마감</td>
+                <!--
                 <td>
                   <select id="period" style="width: 60px">
                     <option value="1">1</option>
@@ -200,19 +211,21 @@
                     <option value="5">5</option>
                   </select>
                   일 진행
+                  </td>
+                -->
+                <td colspan="5">
+                  <input id="endDate" type="datetime-local" />
                 </td>
-                <td colspan="2">시작<input type="datetime-local" /></td>
-                <td colspan="2">마감<input type="datetime-local" /></td>
               </tr>
             </table>
-          </form>
-        </div>
-        <div class="row mx-5 mb-6">
-          <div class="text-center row-cols-7">
-            <button type="submit" class="btn btn-primary">등록</button>
-            <button type="submit" class="btn btn-secondary">취소</button>
           </div>
-        </div>
+          <div class="row mx-5 mb-6">
+            <div class="text-center row-cols-7">
+              <button type="submit" class="btn btn-primary">등록</button>
+              <button type="submit" class="btn btn-secondary">취소</button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
     <!-- Footer-->
@@ -233,7 +246,71 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <!--  -->
+    <script>
+      function toggleTextbox(checkbox) {
+        const textbox_elem = document.getElementById('instantPrice');
+        textbox_elem.disabled = checkbox.checked ? true : false;
+        if (textbox_elem.disabled) {
+          textbox_elem.value = null;
+        } else {
+          textbox_elem.focus();
+        }
+      }
+      // 상품등록 api
+      var myForm = document.getElementById('productInfo');
+
+      myForm.addEventListener('submit', function (e) {
+        e.preventDefault();
+        var categoryId = $('#children2 .list-group-item-info').attr('id');
+
+        var productImage = document.querySelector('#imageForm');
+        var image = [];
+        for (let i = 0; i < filesArr.length; i++) {
+          if (!filesArr[i].is_delete) {
+            image[i] = filesArr[i];
+          }
+        }
+
+        var formData = new FormData();
+        formData.append('name', document.getElementById('title').value);
+        formData.append(
+          'startPrice',
+          document.getElementById('startPrice').value
+        );
+        formData.append('categoryId', categoryId);
+        formData.append(
+          'content',
+          document.getElementById('productContent').value
+        );
+        formData.append(
+          'instantPrice',
+          document.getElementById('instantPrice').value
+        );
+        formData.append(
+          'endDate',
+          document.getElementById('endDate').value + ':00'
+        );
+        formData.append('bidUnit', document.getElementById('bidUnit').value);
+        formData.append('sellerId', 2);
+        formData.append('files', image);
+        console.log(formData);
+        fetch('http://182.218.194.156:8080/product', {
+          method: 'post',
+          headers: {},
+          body: formData,
+        })
+          .then(function (response) {
+            return response.text();
+          })
+          .then(function (data) {
+            console.log(data);
+            //  location.href = '/main/search.html';
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      });
+    </script>
   </body>
 </html>
