--- a/main/register.html
+++ b/main/register.html
@@ -11,6 +11,7 @@
     <meta name="author" content="이성호" />
     <title>상품등록</title>
 
+    <script src="login.js" defer></script>
     <script src="addFile.js"></script>
     <script src="category.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -27,10 +28,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/member/login.html">로그인</a>
+              <a id="login" class="nav-link" href="/member/login.html"
+                >로그인</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/member/join.html">회원가입</a>
+              <a id="join" class="nav-link" href="/member/join.html"
+                >회원가입</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/main/mypage.html">마이페이지</a>
@@ -222,7 +227,7 @@
           <div class="row mx-5 mb-6">
             <div class="text-center row-cols-7">
               <button type="submit" class="btn btn-primary">등록</button>
-              <button type="submit" class="btn btn-secondary">취소</button>
+              <button type="reset" class="btn btn-secondary">취소</button>
             </div>
           </div>
         </form>
@@ -264,51 +269,58 @@
         e.preventDefault();
         var categoryId = $('#children2 .list-group-item-info').attr('id');
 
-        var productImage = document.querySelector('#imageForm');
-        var image = [];
-        for (let i = 0; i < filesArr.length; i++) {
-          if (!filesArr[i].is_delete) {
-            image[i] = filesArr[i];
-          }
-        }
-
         var formData = new FormData();
         formData.append('name', document.getElementById('title').value);
+        console.log(document.getElementById('title').value);
         formData.append(
           'startPrice',
           document.getElementById('startPrice').value
         );
+        console.log(document.getElementById('startPrice').value);
         formData.append('categoryId', categoryId);
+        console.log(categoryId);
         formData.append(
           'content',
           document.getElementById('productContent').value
         );
+        console.log(document.getElementById('productContent').value);
         formData.append(
           'instantPrice',
           document.getElementById('instantPrice').value
         );
+        console.log(document.getElementById('instantPrice').value);
         formData.append(
           'endDate',
           document.getElementById('endDate').value + ':00'
         );
+        console.log(document.getElementById('endDate').value + ':00');
         formData.append('bidUnit', document.getElementById('bidUnit').value);
-        formData.append('sellerId', 2);
-        formData.append('files', image);
-        console.log(formData);
+        console.log(document.getElementById('bidUnit').value);
+        formData.append('sellerId', localStorage.getItem('memberId'));
+        console.log(localStorage.getItem('memberId'));
+        for (let i = 0; i < filesArr.length; i++) {
+          if (!filesArr[i].is_delete) {
+            formData.append('files', filesArr[i]);
+          }
+        }
+        console.log('bearer ' + localStorage.getItem('token'));
         fetch('http://182.218.194.156:8080/product', {
           method: 'post',
-          headers: {},
+          headers: {
+            //'Content-Type': 'multipart/form-data',
+            Authorization: 'Bearer ' + localStorage.getItem('token'),
+          },
           body: formData,
         })
           .then(function (response) {
-            return response.text();
+            return response.json();
           })
           .then(function (data) {
             console.log(data);
-            //  location.href = '/main/search.html';
+            location.href = '/main/search.html';
           })
           .catch(function (error) {
-            console.log(error);
+            console.log(error.name);
           });
       });
     </script>
