--- a/member/join.html
+++ b/member/join.html
@@ -246,7 +246,7 @@
           })
           .then(function (data) {
             console.log(data);
-            //location.href = '/main/search.html';
+            location.href = '/main/search.html';
           })
           .catch(function (error) {
             console.log(error);
