--- a/member/login.html
+++ b/member/login.html
@@ -134,6 +134,7 @@
             console.log(data);
             localStorage.setItem('token', JSON.parse(data).accessToken);
             localStorage.setItem('id', id);
+            localStorage.setItem('memberId', JSON.parse(data).memberId);
             location.href = '/main/search.html';
           })
           .catch(function (error) {
