20220504 상품상세 api 연결(수정), 입찰 api 연결

--- a/main/register.html
+++ b/main/register.html
@@ -176,9 +176,7 @@
                 <td class="text-center">시작가</td>
                 <td><input type="text" id="startPrice" size="20" />원</td>
                 <td class="text-center">즉시 구매가</td>
-                <td>
-                  <input type="text" id="instantPrice" size="20" disabled />원
-                </td>
+                <td><input type="text" id="instantPrice" size="20" />원</td>
                 <td colspan="2" class="text-center">
                   <label
                     ><input
@@ -186,7 +184,6 @@
                       name="impossible"
                       value="impossible"
                       onclick="toggleTextbox(this)"
-                      checked
                     />불가능</label
                   >
                 </td>
