20220511 판매, 구매현황 수정

--- a/main/mypage.html
+++ b/main/mypage.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="login.js" defer></script>
     <script src="memberChange.js" defer></script>
-    <script src="memberSearch.js"></script>
+    <script src="memberSearch.js" defer></script>
     <script src="bidModal.js"></script>
     
     <!--웹 로고-->
