--- a/member/join.html
+++ b/member/join.html
@@ -119,50 +119,50 @@
           <select name="department" class="form-control" id="departSelect">
             <option value="none">학과를 선택해주세요.</option>
             <optgroup label="기계공학부">
-              <option value="기계과">기계공학과</option>
-              <option value="기설과">기계설계공학과</option>
-              <option value="메카과">메카트로닉스공학과</option>
+              <option value="기계공학과">기계공학과</option>
+              <option value="기계설계공학과">기계설계공학과</option>
+              <option value="메카트로닉스공학과">메카트로닉스공학과</option>
             </optgroup>
             <optgroup label="수송기계학부">
-              <option value="조선과">조선기계공학과</option>
-              <option value="항공기계과">항공기계공학과</option>
-              <option value="자동차과">자동차공학과</option>
+              <option value="조선기계공학과">조선기계공학과</option>
+              <option value="항공기계공학과">항공기계공학과</option>
+              <option value="자동차공학과">자동차공학과</option>
             </optgroup>
             <optgroup label="정보산업공학부">
-              <option value="전기과">전기공학과</option>
-              <option value="전자과">전자공학과</option>
-              <option value="정통과">정보통신공학과</option>
+              <option value="전기공학과">전기공학과</option>
+              <option value="전자공학과">전자공학과</option>
+              <option value="정보통신공학과">정보통신공학과</option>
             </optgroup>
             <optgroup label="컴퓨터정보공학부">
-              <option value="컴정과">컴퓨터정보과</option>
-              <option value="컴시과">컴퓨터시스템과</option>
+              <option value="컴퓨터정보과">컴퓨터정보과</option>
+              <option value="컴퓨터시스템과">컴퓨터시스템과</option>
             </optgroup>
             <optgroup label="지구환경공학부">
-              <option value="건설과">건설환경공학과</option>
-              <option value="공간정보과">공간정보빅데이터과</option>
+              <option value="건설환경공학과">건설환경공학과</option>
+              <option value="공간정보빅데이터과">공간정보빅데이터과</option>
             </optgroup>
             <optgroup label="건축학부">
-              <option value="건축과">건축학과</option>
-              <option value="실건과">실내건축학과</option>
+              <option value="건축학과">건축학과</option>
+              <option value="실내건축학과">실내건축학과</option>
             </optgroup>
             <optgroup label="신소재공학부">
-              <option value="화학과">화학생명공학과</option>
-              <option value="재료과">재료공학과</option>
+              <option value="화학생명공학과">화학생명공학과</option>
+              <option value="재료공학과">재료공학과</option>
             </optgroup>
             <optgroup label="서비스학부">
-              <option value="항운과">항공운항과</option>
-              <option value="항경과">항공경영학과</option>
-              <option value="관광과">관광경영학과</option>
-              <option value="비서과">비서학과</option>
-              <option value="호경과">호텔경영학과</option>
+              <option value="항공운항과">항공운항과</option>
+              <option value="항공경영학과">항공경영학과</option>
+              <option value="관광경영학과">관광경영학과</option>
+              <option value="비서학과">비서학과</option>
+              <option value="호텔경영학과">호텔경영학과</option>
             </optgroup>
             <optgroup label="디자인학부">
-              <option value="산디과">산업디자인학과</option>
-              <option value="패션과">패션디자인학과</option>
+              <option value="산업디자인학과">산업디자인학과</option>
+              <option value="패션디자인학과">패션디자인학과</option>
             </optgroup>
             <optgroup label="계약학과">
-              <option value="스마트기설과">스마트기계설계과</option>
-              <option value="스마트자동차과">첨단스마트자동차과</option>
+              <option value="스마트기계설계과">스마트기계설계과</option>
+              <option value="첨단스마트자동차과">첨단스마트자동차과</option>
             </optgroup>
           </select>
           <label for="departSelect">학과</label>
@@ -222,6 +222,7 @@
           'department',
           document.getElementById('departSelect').value
         );
+        console.log(document.getElementById('departSelect').value);
         formData.append(
           'phone',
           document.getElementById('floatingPhone').value
@@ -246,7 +247,7 @@
           })
           .then(function (data) {
             console.log(data);
-            location.href = '/main/search.html';
+            // location.href = '/main/search.html';
           })
           .catch(function (error) {
             console.log(error);
