--- a/main/mypage.html
+++ b/main/mypage.html
@@ -372,7 +372,13 @@
                 <button id="registration" type="button" class="btn btn-primary">
                   등록
                 </button>
-                <button type="submit" class="btn btn-secondary">취소</button>
+                <button
+                  type="submit"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  취소
+                </button>
               </div>
             </div>
           </div>
