--- a/member/join.html
+++ b/member/join.html
@@ -247,7 +247,7 @@
           })
           .then(function (data) {
             console.log(data);
-            // location.href = '/main/search.html';
+            location.href = '/main/search.html';
           })
           .catch(function (error) {
             console.log(error);
