--- a/main/mypage.html
+++ b/main/mypage.html
@@ -13,6 +13,7 @@
     <script src="memberSearch.js" defer></script>
     <script src="bidModal.js"></script>
     <script src="reviewWrite.js"></script>
+    <script src="selectReview.js" defer></script>
 
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
@@ -109,6 +110,7 @@
             <ul class="nav col-12 col-lg-auto mb-2 justify-content-center">
               <li class="px-5">
                 <button
+                  id="selectReviewBtn"
                   type="button"
                   class="btn"
                   data-bs-toggle="modal"
@@ -156,7 +158,9 @@
           <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">상점후기</h4>
+                <h4 class="modal-title" id="exampleModalLabel">
+                  상점후기 조회
+                </h4>
                 <button
                   type="button"
                   class="btn-close"
@@ -165,56 +169,7 @@
                 ></button>
               </div>
               <div class="modal-body">
-                <table class="tb-w100 text-center">
-                  <colgroup>
-                    <col style="width: 10%" />
-                    <col style="width: 20%" />
-                    <col style="width: 30%" />
-                    <col style="width: 10%" />
-                    <col style="width: 15%" />
-                    <col style="width: 15%" />
-                  </colgroup>
-                  <tr>
-                    <th>번호</th>
-                    <th>상품명</th>
-                    <th>구매후기</th>
-                    <th>작성자</th>
-                    <th>작성일</th>
-                    <th>평점</th>
-                  </tr>
-                  <tr>
-                    <td>fd</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>dfd</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                </table>
+                <table id="selectReview" class="tb-w100 text-center"></table>
               </div>
               <div class="modal-footer">
                 <button
@@ -237,7 +192,7 @@
           aria-labelledby="exampleModalLabel"
           aria-hidden="true"
         >
-          <div class="modal-dialog modal-dialog-centered modal-lg">
+          <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
               <div class="modal-header">
                 <h4 class="modal-title" id="exampleModalLabel">회원정보수정</h4>
