20220516 회원 상태 변경 api 연결

--- a/admin/member.html
+++ b/admin/member.html
@@ -22,6 +22,7 @@
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="/admin/js/logout.js" defer></script>
+    <script src="/admin/js/memberChange.js" defer></script>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -114,12 +115,10 @@
                 </table>
               </div>
             </div>
-            <div>
-
-            </div>
+          
             <div class="text-end row-cols-7">
-              <button type="submit" class="btn btn-primary">탈퇴</button>
-              <button type="submit" class="btn btn-secondary">확인</button>
+              <input type="button" class="btn btn-primary" value="탈퇴"/>
+              <input id="checkBtn" type="button" class="btn btn-secondary" value="확인"/>
             </div>
           </div>
         </main>
