--- a/admin/member.html
+++ b/admin/member.html
@@ -15,12 +15,14 @@
       rel="stylesheet"
     />
     <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="/admin/js/memberSelect.js"></script>
+    <script src="/admin/js/memberDelete.js" defer></script>
     <script
       src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    
     <script src="/admin/js/logout.js" defer></script>
     <script src="/admin/js/memberChange.js" defer></script>
   </head>
@@ -88,16 +90,18 @@
                 <table style="table-layout: fixed;" id="datatablesSimple">
                   <colgroup>
                     <col style="width: 7%">
+                    <col style="width: 7%">
                     <col style="width: 10%">
                     <col style="width: 10%">
                     <col style="width: 10%">
+                    <col style="width: 11%">
                     <col style="width: 15%">
                     <col style="width: 15%">
-                    <col style="width: 20%">
-                    <col style="width: 13%">
+                    <col style="width: 15%">
                   </colgroup>
                   <thead>
                     <tr>
+                      <th>선택</th>
                       <th>이름</th>
                       <th>학과</th>
                       <th>아이디</th>
@@ -117,7 +121,7 @@
             </div>
           
             <div class="text-end row-cols-7">
-              <input type="button" class="btn btn-primary" value="탈퇴"/>
+              <input id ="deleteBtn" type="button" class="btn btn-primary" value="탈퇴"/>
               <input id="checkBtn" type="button" class="btn btn-secondary" value="확인"/>
             </div>
           </div>
